--- a/app/assets/stylesheets/public/_toc.scss
+++ b/app/assets/stylesheets/public/_toc.scss
@@ -2,6 +2,8 @@
   box-sizing: border-box;
 
   @media (min-width: $screen-lg) {
+    background-color: #fff;
+    border-left: #ddd 1px solid;
     font-family: $font-family;
     font-size: 14px;
     height: calc(100vh - #{$header-height});
